--- a/src/base.scss
+++ b/src/base.scss
@@ -2,6 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
+// no-scrollbar
 @layer utilities {
   /* Hide scrollbar for Chrome, Safari and Opera */
   .no-scrollbar::-webkit-scrollbar {
@@ -12,6 +13,19 @@
     -ms-overflow-style: none; /* IE and Edge */
     scrollbar-width: none; /* Firefox */
   }
+}
+
+// tooltip
+.tooltip {
+  @apply invisible absolute;
+}
+
+.has-tooltip:hover .tooltip {
+  @apply visible z-50 -mt-10 rounded  border bg-white p-2 shadow-lg;
+}
+
+.has-tooltip:hover .tooltip:hover {
+  @apply invisible;
 }
 
 @import url('assets/css/fontawsome.css');
